# whooshpad

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/whooshpad/: __init__.py  __main__.py  server.py
tests/: test_server.py
